Add PodWeaver plugin

--- a/dist.ini
+++ b/dist.ini
@@ -18,6 +18,7 @@ repository.url    = git://git.moose.perl.org/MooseX-Params-Validate.git
 repository.web    = http://git.shadowcat.co.uk/gitweb/gitweb.cgi?p=gitmo/MooseX-Params-Validate.git
 repository.type   = git
 
+[PodWeaver]
 [PodSyntaxTests]
 [NoTabsTests]
 [EOLTests]
