Add Authority plugin

--- a/dist.ini
+++ b/dist.ini
@@ -4,6 +4,9 @@ author  = Stevan Little <stevan.little@iinteractive.com>
 license = Perl_5
 copyright_holder = Stevan Little <stevan.little@iinteractive.com>
 
+[Authority]
+authority = cpan:STEVAN
+
 [@Basic]
 
 [PkgVersion]
