Add copyright year

--- a/dist.ini
+++ b/dist.ini
@@ -2,6 +2,7 @@ name = MooseX-Params-Validate
 author  = Stevan Little <stevan.little@iinteractive.com>
 license = Perl_5
 copyright_holder = Stevan Little <stevan.little@iinteractive.com>
+copyright_year   = 2011
 
 version = 0.16
 
