Update dist.ini and add $NEXT token to changelog

--- a/dist.ini
+++ b/dist.ini
@@ -9,9 +9,10 @@ version = 0.16
 [Authority]
 authority = cpan:STEVAN
 
-[@Basic]
+[NextRelease]
+format = %-6v %{yyyy-MM-dd}d
 
-[PkgVersion]
+[@Basic]
 
 [InstallGuide]
 [MetaJSON]
@@ -23,24 +24,16 @@ repository.url    = git://git.moose.perl.org/MooseX-Params-Validate.git
 repository.web    = http://git.shadowcat.co.uk/gitweb/gitweb.cgi?p=gitmo/MooseX-Params-Validate.git
 repository.type   = git
 
-[PodWeaver]
-[PodSyntaxTests]
-[NoTabsTests]
+[SurgicalPodWeaver]
+
+[PkgVersion]
+
 [EOLTests]
-[Signature]
+[NoTabsTests]
+[PodSyntaxTests]
+[Test::Pod::LinkCheck]
+[Test::Pod::No404s]
 
-[CheckChangeLog]
-
-[Prereqs]
-Carp             = 0
-Devel::Caller    = 0
-Moose            = 0.58
-Params::Validate = 0.88
-Scalar::Util     = 0
-Sub::Exporter    = 0
-
-[Prereqs / TestRequires]
-Test::Fatal = 0.001
-Test::More  = 0.88
+[AutoPrereqs]
 
 [@Git]
