Add me to list of authors

--- a/dist.ini
+++ b/dist.ini
@@ -1,5 +1,6 @@
 name = MooseX-Params-Validate
 author  = Stevan Little <stevan.little@iinteractive.com>
+author  = Dave Rolsky <autarch@urth.org>
 license = Perl_5
 copyright_holder = Stevan Little <stevan.little@iinteractive.com>
 copyright_year   = 2013
