Switch to my dzil bundle

--- a/dist.ini
+++ b/dist.ini
@@ -7,37 +7,16 @@ copyright_year   = 2013
 
 version = 0.18
 
-[Authority]
-authority = cpan:STEVAN
+[@DROLSKY]
+dist = MooseX-Params-Validate
+next_release_width = 4
+pod_coverage_trustme = MooseX::Params::Validate => qr/^(?:validatep?|import)$/
+prereqs_skip = ^Roles::Blah$
+stopwords = Rolsky
+stopwords = Stevan
+stopwords = coercions
+stopwords = cpan
+stopwords = isa
+stopwords = param
+stopwords = subname
 
-[NextRelease]
-format = %-4v %{yyyy-MM-dd}d
-
-[@Basic]
-
-[InstallGuide]
-[MetaJSON]
-
-[MetaResources]
-bugtracker.web    = http://rt.cpan.org/NoAuth/Bugs.html?Dist=MooseX::Params::Validate
-bugtracker.mailto = bug-datetime@rt.cpan.org
-repository.url    = git://git.moose.perl.org/MooseX-Params-Validate.git
-repository.web    = http://git.shadowcat.co.uk/gitweb/gitweb.cgi?p=gitmo/MooseX-Params-Validate.git
-repository.type   = git
-
-[SurgicalPodWeaver]
-
-[PkgVersion]
-
-[EOLTests]
-[NoTabsTests]
-[PodSyntaxTests]
-[Test::Pod::LinkCheck]
-[Test::Pod::No404s]
-
-[AutoPrereqs]
-skip = ^Roles::Blah$
-
-[CheckPrereqsIndexed]
-
-[@Git]
