Update Stevan's email address

--- a/dist.ini
+++ b/dist.ini
@@ -1,8 +1,8 @@
 name = MooseX-Params-Validate
-author  = Stevan Little <stevan.little@iinteractive.com>
+author  = Stevan Little <stevan@cpan.org>
 author  = Dave Rolsky <autarch@urth.org>
 license = Perl_5
-copyright_holder = Stevan Little <stevan.little@iinteractive.com>
+copyright_holder = Stevan Little <stevan@cpan.org>
 copyright_year   = 2013
 
 [@DROLSKY]
